[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/char/bonnie/59e.png" type="Texture" id=1]
[ext_resource path="res://sprites/char/bonnie/595.png" type="Texture" id=2]
[ext_resource path="res://objects/chars/bonnie/bonnie.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 183.5, 171.5 )

[node name="bonnie" type="Node2D"]
script = ExtResource( 3 )

[node name="camerasprite" type="AnimatedSprite" parent="."]
position = Vector2( -1010, -334 )
z_index = 7
frames = SubResource( 1 )
offset = Vector2( 1010, 334 )

[node name="detectCamera" type="Area2D" parent="."]

[node name="hitbox" type="CollisionShape2D" parent="detectCamera"]
shape = SubResource( 2 )

[connection signal="animation_finished" from="camerasprite" to="." method="_on_camerasprite_animation_finished"]
[connection signal="area_entered" from="detectCamera" to="." method="_on_detectCamera_area_entered"]
[connection signal="area_exited" from="detectCamera" to="." method="_on_detectCamera_area_exited"]
